fix(reviwer): scrollbars not shown on reviwer

--- a/src/features/Reviewer/components/styles.module.css
+++ b/src/features/Reviewer/components/styles.module.css
@@ -17,6 +17,7 @@
 	gap: 1rem;
 	flex-direction: column;
 	height: 100%;
+	overflow: auto;
 
 	& ol,
 	& ul {
